# nemo-agent-toolkit-examples

./: README.md
configs/: experiment1_tool_descriptions.yml  experiment2_gpu_agent.yml  experiment3_multi_agent.yml  experiment4_energy_tracker.yml  ollama_agent.yml  ollama_time_agent.yml  voice_agent.yml
tools/energy_tracker/: energy_tracker_tool.py  pyproject.toml
tools/gpu_status/: gpu_status_tool.py  pyproject.toml
